# polars-pipes

./: README.md  package-lock.json
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app.component.spec.ts  app.component.ts
frontend/src/app/main/: main.component.html  main.component.ts
frontend/src/tests/: tests.spec.ts
rust/: Cargo.toml  README.md
rust/pkg/: .gitignore  package.json  polars_pipes.d.ts  polars_pipes.js  polars_pipes.original.d.ts  polars_pipes_bg.js  polars_pipes_bg.wasm.d.ts
rust/src/: lib.rs
