[package]
name = "polars-pipes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
#polars = { version = "0.31.1", features = ["lazy"] }
#polars = { version = "0.25.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.5"

# our custom polars fork that works in wasm
[dependencies.polars]
features = [
  "dtype-full",
  # "list",
  "mode",
  "csv-file",
  "lazy",
  "strings",
  "temporal",
  "rows",
  "cum_agg",
  "rolling_window",
  "round_series",
  "arange",
  "diagonal_concat",
  "ndarray"
]
default-features = false
git =  "https://github.com/gitkwr/polars"

