[package]
name = "polars-pipes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
#polars = { version = "0.31.1", features = ["lazy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.5"
chrono = "0.4.26"
console_error_panic_hook = "0.1.7"

# polars = { path = "../../polars-for-wasm/crates/polars", features=["lazy"] }
# polars-lazy = { path = "../../polars-for-wasm/crates/polars-lazy" }
polars = { features = ["lazy"], git = "https://github.com/jajetloh/polars-for-wasm" }
